--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.14",
+    "devour-client": "^2.0.15",
     "vue": "^2.6.9",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
