--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.0.0-rc.14",
     "devour-client": "^2.0.15",
     "vue": "^2.6.9",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.2",
     "vuex": "^3.0.1"
   },
