--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
@@ -17,12 +18,19 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core":"7.4.5",
+    "babel-core": "^7.0.0-bridge.0",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
+    "babel-plugin-module-resolver": "^3.2.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest": "^24.8.0",
+    "vue-jest": "^3.0.4",
     "vue-template-compiler": "^2.6.9"
   },
   "eslintConfig": {
