--- a/package.json
+++ b/package.json
@@ -10,28 +10,34 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.19",
-    "devour-client": "^2.0.15",
-    "vue": "^2.6.9",
+    "bootstrap-vue": "^2.0.0-rc.25",
+    "devour-client": "^2.0.23",
+    "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core":"7.4.5",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/core": "7.4.5",
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-plugin-module-resolver": "^3.2.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.0.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.8.0",
+    "vue-eslint-parser": "^6.0.4",
     "vue-jest": "^3.0.4",
-    "vue-template-compiler": "^2.6.9"
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
