--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.25",
+    "bootstrap-vue": "^2.0.2",
     "devour-client": "^2.0.23",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
