--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
+    "date-fns": "^2.4.1",
     "devour-client": "^2.0.23",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
+    "vue2-daterange-picker": "^0.3.1",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -27,8 +29,8 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^5.2.3",
     "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "jest": "^24.8.0",
     "vue-eslint-parser": "^6.0.4",
     "vue-jest": "^3.0.4",
