--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.2",
     "date-fns": "^2.4.1",
     "devour-client": "^2.0.23",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
