--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "babel-eslint": "^10.0.1",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@vue/cli-plugin-babel": "4.0.3",
+    "@vue/cli-plugin-eslint": "4.0.3",
+    "@vue/cli-service": "4.0.3",
+    "babel-eslint": "10.0.3",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.0.1",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint-plugin-vue": "5.2.3",
     "jest": "^24.8.0",
     "vue-eslint-parser": "^6.0.4",
     "vue-jest": "^3.0.4",
