--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "date-fns": "^2.4.1",
     "devour-client": "^2.0.23",
     "lodash": "^4.17.15",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
