Table layout bugfix and table cells colouring (#15)

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
   },
   "rules": {
     "implicit-arrow-linebreak": "off",
-    "no-param-reassign": ["error", { "props": false }]
+    "no-param-reassign": ["error", { "props": false }],
+    "no-underscore-dangle": ["error", { "allow": ["_cellVariants"] }]
   },
   "globals": {
     "CONFIG": "readonly"
