--- a/.travis.yml
+++ b/.travis.yml
@@ -43,10 +43,9 @@ jobs:
       skip_cleanup: true
       provider: script
       script:
-      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT"
-        stretch nightly main /build/*.deb
-      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT"
-        buster nightly main /build/*.deb
+      - echo "yeti-client deploying"
+      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "https://pkg.yeti-switch.org/api" stretch nightly main /build/*.deb 2&>1
+      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "https://pkg.yeti-switch.org/api" buster nightly main /build/*.deb 2&>1
       on:
         all_branches: true
         repo: yeti-switch/yeti-client
