--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,7 @@ jobs:
       skip_cleanup: true
       provider: script
       script:
-      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT"
-        stretch "${TRAVIS_TAG:0:3}" main /build/*.deb
-      - docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT"
-        buster "${TRAVIS_TAG:0:3}" main /build/*.deb
+        docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT" stretch "${TRAVIS_TAG:0:3}" main /build/*.deb&&ci/deploy.sh "$API_ENDPOINT" buster "${TRAVIS_TAG:0:3}" main /build/*.deb
       on:
         tags: true
         condition: "$TRAVIS_TAG != *-master*"
@@ -43,7 +40,7 @@ jobs:
       skip_cleanup: true
       provider: script
       script:
-        docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "https://pkg.yeti-switch.org/api" stretch nightly main /build/*.deb 2&>1
+        docker run --name yeti-client-deploy yeti-client:built ci/deploy.sh "$API_ENDPOINT" stretch nightly main /build/*.deb&&ci/deploy.sh "$API_ENDPOINT" buster nightly main /build/*.deb 
       on:
         all_branches: true
         repo: yeti-switch/yeti-client
