--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
     "vue2-daterange-picker": "^0.3.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
