--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,6 @@
     "no-underscore-dangle": ["error", { "allow": ["_cellVariants"] }]
   },
   "globals": {
-    "CONFIG": "readonly"
+    "YETI_CONFIG": "readonly"
   }
 }
