--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,4 @@
-const config = require.resolve('@vue/cli-service/webpack.config.js');
-
-console.log('config:', config);
-
-module.exports = {
+{
   "env": {
     "browser": true,
     "es6": true,
@@ -17,11 +13,11 @@ module.exports = {
       "node": {
         "extensions": [".js", ".vue"],
       },
-      alias: {
-        map: [
-          ['@', './src'],
+      "alias": {
+        "map": [
+          ["@", "./src"],
         ],
-        extensions: ['.vue', '.js', '.json']
+        "extensions": [".vue", ".js", ".json"]
       }
     }
   },
