--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vue/cli-plugin-babel": "4.0.3",
     "@vue/cli-plugin-eslint": "4.0.3",
     "@vue/cli-service": "4.0.3",
+    "@vue/test-utils": "1.0.0-beta.33",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
