--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   "devDependencies": {
     "@babel/core": "7.4.5",
     "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-transform-runtime": "7.9.6",
-    "@babel/preset-env": "7.9.6",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/preset-env": "7.9.0",
     "@vue/cli-plugin-babel": "4.0.3",
     "@vue/cli-plugin-eslint": "4.0.3",
     "@vue/cli-service": "4.0.3",
@@ -56,5 +56,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "resolutions": {
+		"**/moment": "2.24.0"
+	}
 }
