--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-vue": "5.2.3",
     "jest": "^24.8.0",
     "jest-extended": "0.11.5",
+    "jest-transform-stub": "2.0.0",
     "vue-eslint-parser": "^6.0.4",
     "vue-jest": "3.0.5",
     "vue-template-compiler": "^2.6.10"
@@ -58,6 +59,6 @@
     "not ie <= 8"
   ],
   "resolutions": {
-		"**/moment": "2.24.0"
-	}
+    "**/moment": "2.24.0"
+  }
 }
