--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
+    "store": "2.0.12",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-notification": "^1.3.16",
