--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "ant-design-vue": "1.6.3",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "chart.js": "^2.9.3",
