--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=react-test
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-
 # --- optional properties ---
 
 # defaults to project key
@@ -10,7 +9,8 @@ sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 #sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
+sonar.sources=./src
+sonar.coverage.exclusions=**/*test*/*
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
