--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "5.2.3",
+    "husky": "4.2.5",
     "jest": "^24.8.0",
     "jest-extended": "0.11.5",
     "jest-transform-stub": "2.0.0",
@@ -65,5 +66,10 @@
   ],
   "resolutions": {
     "**/moment": "2.24.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "docker run --network=host -e SONAR_HOST_URL='http://127.0.0.1:9000' --user='$(id -u):$(id -g)' -v '$PWD:/usr/src' sonarsource/sonar-scanner-cli"
+    }
   }
 }
