--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=react-test
+sonar.projectKey=yeti
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 # --- optional properties ---
 
