--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=yeti
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 # --- optional properties ---
 
 # defaults to project key
