--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "jest"
+    "test": "jest",
+    "sonar": "sonar-scanner"
   },
   "dependencies": {
     "ant-design-vue": "1.6.3",
@@ -51,8 +52,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "5.2.3",
-    "husky": "4.2.5",
-    "jest": "^24.8.0",
+    "jest": "^25.2.7",
     "jest-extended": "0.11.5",
     "jest-transform-stub": "2.0.0",
     "vue-eslint-parser": "^6.0.4",
@@ -66,10 +66,5 @@
   ],
   "resolutions": {
     "**/moment": "2.24.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "docker run --network=host -e SONAR_HOST_URL='http://127.0.0.1:9000' -v `pwd`:'/usr/src' sonarsource/sonar-scanner-cli"
-    }
   }
 }
