--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,8 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
  
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./src
-sonar.coverage.exclusions=**/*test*/*
+sonar.exclusions=**/*test*/*,**/*constants*/*,**/constants.js
+sonar.coverage.exclusions=**/*test*/*,**/*constants*/*,**/constants.js
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
