--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@vue/cli-plugin-babel": "4.4.3",
     "@vue/cli-plugin-eslint": "4.4.3",
     "@vue/cli-service": "4.4.3",
-    "@vue/test-utils": "1.0.0-beta.33",
+    "@vue/test-utils": "1.0.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.8.0",
