--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "store": "2.0.12",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
+    "vue-i18n": "8.21.0",
     "vue-notification": "^1.3.16",
     "vue-router": "^3.0.6",
     "vue2-daterange-picker": "^0.4.3",
