--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-transform-runtime": "7.9.0",
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.10.4",
+    "@kazupon/vue-i18n-loader": "0.5.0",
     "@vue/cli-plugin-babel": "4.4.3",
     "@vue/cli-plugin-eslint": "4.4.3",
     "@vue/cli-service": "4.4.3",
