--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^25.2.7",
     "jest-extended": "0.11.5",
     "jest-transform-stub": "2.0.0",
+    "sinon": "9.0.3",
     "vue-eslint-parser": "^6.0.4",
     "vue-jest": "3.0.5",
     "vue-template-compiler": "^2.6.10"
