--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "5.2.3",
+    "flush-promises": "1.0.2",
     "jest": "^25.2.7",
     "jest-extended": "0.11.5",
     "jest-transform-stub": "2.0.0",
