--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run yarn tests
-        run: yarn test
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '10'
+      
+      - run: yarn install
+      - run: yarn test
 
