--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^8.0.0",
     "store": "2.0.12",
     "vue": "^2.6.10",
+    "vue-auth-href": "^1.3.0",
     "vue-chartjs": "^3.5.0",
     "vue-i18n": "8.21.0",
     "vue-notification": "^1.3.16",
